tests/typing/bad/testfile-param-type.jl
function f(x::Int64)
    return x && true
end
